# monarch-brlapi-server

./: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/humanware/keysoftsdk/selfbrailling/aidl/: ISelfBrailling.aidl
app/src/main/assets/: commands.xml
app/src/main/kotlin/dev/emassey0135/monarchBrlapiServer/: BrlapiServer.kt  MainActivity.kt  ServerDisplayActivity.kt  TestActivity.kt  XmlResource.kt
app/src/main/kotlin/dev/emassey0135/monarchBrlapiServer/brailleDisplayService/: BrailleDisplayService.kt
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
