[package]
name = "monarch-brlapi-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "monarch_brlapi_server"
crate-type = ["cdylib"]

[profile.release]
strip = true

[dependencies]
bitflags = { version = "2.9.1", features = ["std"] }
brlapi-server = { git = "https://github.com/emassey0135/brlapi-rs", version = "0.1.0" }
brlapi-types = { git = "https://github.com/emassey0135/brlapi-rs", version = "0.1.0" }
jni = "0.21.1"
ndarray = "0.16.1"
tokio = { version = "1.45.1", features = ["full"] }

[build-dependencies]
autotools = "0.2.7"
